added train, model, utils

--- a/starter_code.ipynb
+++ b/starter_code.ipynb
@@ -2,13 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "vnWhNJC8M5d5"
-   },
-   "outputs": [],
+   "execution_count": 2,
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -22,27 +16,27 @@
     "\n",
     "import matplotlib.pyplot as plt # for plotting\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "kC9JUlQMM5d9"
-   },
-   "source": [
-    "### Image Transforms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   ],
+   "outputs": [],
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "g6ClqmTUM5d9"
-   },
-   "outputs": [],
+    "id": "vnWhNJC8M5d5"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Image Transforms"
+   ],
+   "metadata": {
+    "colab_type": "text",
+    "id": "kC9JUlQMM5d9"
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "source": [
     "class Rescale(object):\n",
     "    \"\"\"Rescale the image in a sample to a given size.\n",
@@ -86,27 +80,27 @@
     "IMAGE_RESIZE = (256, 256)\n",
     "# Sequentially compose the transforms\n",
     "img_transform = transforms.Compose([Rescale(IMAGE_RESIZE), ToTensor()])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "K5CM4cBhM5eA"
-   },
-   "source": [
-    "### Captions Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   ],
+   "outputs": [],
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "rbEQS053M5eA"
-   },
-   "outputs": [],
+    "id": "g6ClqmTUM5d9"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Captions Preprocessing"
+   ],
+   "metadata": {
+    "colab_type": "text",
+    "id": "K5CM4cBhM5eA"
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "source": [
     "class CaptionsPreprocessing:\n",
     "    \"\"\"Preprocess the captions, generate vocabulary and convert words to tensor tokens\n",
@@ -176,29 +170,29 @@
     "        return torch.zeros(len(img_caption_list), 10)\n",
     "\n",
     "# Set the captions tsv file path\n",
-    "CAPTIONS_FILE_PATH = 'Train_text.tsv'\n",
+    "CAPTIONS_FILE_PATH = './data/Train_text.tsv'\n",
     "captions_preprocessing_obj = CaptionsPreprocessing(CAPTIONS_FILE_PATH)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "lzmf-nlhM5eC"
-   },
-   "source": [
-    "### Dataset Class"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   ],
+   "outputs": [],
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "bUuWkFPpM5eD"
-   },
-   "outputs": [],
+    "id": "rbEQS053M5eA"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Dataset Class"
+   ],
+   "metadata": {
+    "colab_type": "text",
+    "id": "lzmf-nlhM5eC"
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "source": [
     "class ImageCaptionsDataset(Dataset):\n",
     "\n",
@@ -237,27 +231,27 @@
     "        sample = {'image': image, 'captions': captions}\n",
     "\n",
     "        return sample"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "W0pi-EQYM5eF"
-   },
-   "source": [
-    "### Model Architecture"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   ],
+   "outputs": [],
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "6eaz6MgvM5eG"
-   },
-   "outputs": [],
+    "id": "bUuWkFPpM5eD"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Model Architecture"
+   ],
+   "metadata": {
+    "colab_type": "text",
+    "id": "W0pi-EQYM5eF"
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "source": [
     "class ImageCaptionsNet(nn.Module):\n",
     "    def __init__(self):\n",
@@ -276,27 +270,27 @@
     "\n",
     "# If GPU training is required\n",
     "# net = net.cuda()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "rUQtOQ5JM5eI"
-   },
-   "source": [
-    "### Training Loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   ],
+   "outputs": [],
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "ZmqfKZIPM5eI"
-   },
-   "outputs": [],
+    "id": "6eaz6MgvM5eG"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Training Loop"
+   ],
+   "metadata": {
+    "colab_type": "text",
+    "id": "rUQtOQ5JM5eI"
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "source": [
     "IMAGE_DIR = ''\n",
     "\n",
@@ -331,7 +325,34 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    print(\"Iteration: \" + str(epoch + 1))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "optimizer got an empty parameter list",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_13870/560466610.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mNUM_WORKERS\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;31m# Parallel threads for dataloading\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mloss_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mLEARNING_RATE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m# Creating the DataLoader for batching purposes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/iitd/lib/python3.8/site-packages/torch/optim/sgd.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, params, lr, momentum, dampening, weight_decay, nesterov)\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnesterov\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmomentum\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mdampening\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Nesterov momentum requires a momentum and zero dampening\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setstate__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/iitd/lib/python3.8/site-packages/torch/optim/optimizer.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, params, defaults)\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0mparam_groups\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_groups\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"optimizer got an empty parameter list\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_groups\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0mparam_groups\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'params'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mparam_groups\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: optimizer got an empty parameter list"
+     ]
+    }
+   ],
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "ZmqfKZIPM5eI"
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -341,9 +362,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.3 64-bit ('iitd': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -355,7 +375,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
+  },
+  "interpreter": {
+   "hash": "a4e6650f54d9eb01822ffabb07bd34ad5be8d30459e8e9ca69be37d46a7e521d"
   }
  },
  "nbformat": 4,
